--- a/infrastructure/frontend_app.yaml
+++ b/infrastructure/frontend_app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: frontend-app
   annotations:
     argocd-image-updater.argoproj.io/image-list: frontend=192.168.44.44:8082/repo123/frontend
-    argocd-image-updater.argoproj.io/backend.update-strategy: latest
+    argocd-image-updater.argoproj.io/frontend.update-strategy: latest
     argocd-image-updater.argoproj.io/write-back-method: argocd
 spec:
   destination:
