--- a/infrastructure/backend_app.yaml
+++ b/infrastructure/backend_app.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
-
 metadata:
   name: backend-app
+  namespace: argocd
   annotations:
       argocd-image-updater.argoproj.io/image-list: backend=192.168.44.44:8082/repo123/backend
       argocd-image-updater.argoproj.io/backend.update-strategy: latest
